--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "2.2.7-patch.1",
     "private": true,
     "homepage": "https://flowiseai.com",
+    "packageManager": "pnpm@8.15.4",
     "workspaces": [
         "packages/*",
         "flowise",
